<?xml version="1.0" encoding="utf-8"?>
<resources>
	
     			  <!--  main strings-->
    
    <string name="app_name">Fitness Tester</string>
	<string name="action_settings">Settings</string>
	<string name="profile">Profile</string>
	<string name="speed">Speed Test</string>
	<string name="record">Record Run</string>
	<string name="login">Login</string>
	<string name="jump">Vertical Jump</string>
	<string name="beep">1km Test</string>
	<string name="create_user">Create</string>
	<string name="logout">Logout</string>
	<string name="sync">Sync</string>
	<string name="cal">Calibrate</string>
		
      
     		  <!--  createpage strings -->   
       
    <string name="fname">First Name:</string>
	<string name="lname">Last Name:</string>
    <string name="age">Age:</string>
    <string name="weight">Weight(kg):</string>
	<string name="pass">Password:</string>
	<string name="enter">Enter</string>
	<string name="save">Save</string>
	<string name="username">UserName:</string>
	<string name="create">Create Account/Add Coach</string>
	<string name="coach">Coach:</string>
	<string name="add_coach">Add Coach</string>
	<string name="ok">OK</string>
	<string name="coach_name">Coach Name:</string>
	<string name="set">Set Coach</string>
	
				
				<!--  calibrate strings -->
				
	<string name="walk">Walk:</string>
	<string name="jog">Jog:</string>
	<string name="run">Run:</string>
	<string name="stop">Stop</string>
	<string name="info">To calibrate the app you must set out a lane of 20m and complete it at different speeds(Walk, Jog, Run). 
	     When your ready press the relevant button, you will be alerted
	    when the test will begin. When you reach the end of the lane you must press stop. Repeat for the 3 
	    speeds.</string>	
	
				
				<!--  jump strings -->
				
	<string name="attem1">Attempt 1:</string>
	<string name="attem2">Attempt 2:</string>
	<string name="attem3">Attempt 3:</string>
	<string name="start">Start</string>
	<string name="height">Height(cm):</string>
	<string name="time">Time(ms):</string>
	<string name="jump_instructions">Wait for the beep before you jump!</string>
   <string name="best">Best Jump: </string>
      
            
            		<!--  speed strings -->
            
    <string name="tot_distance">Total Distance(m):</string>
    <string name="step_dist">Step Distance(m):</string>
    <string name="at1">Attempt 1 (m):</string>
	<string name="at2">Attempt 2 (m):</string>
	<string name="at3">Attempt 3 (m):</string>
	<string name="at4">Attempt 4 (m):</string>
	<string name="at5">Attempt 5 (m):</string>
	<string name="at6">Attempt 6 (m):</string>
    
     			 <!--  run strings -->
     			 
   	<string name="rec">Record</string>
   	<string name="dist">Distance:</string>
   	<string name="pace">Pace-km/h:</string>
   	<string name="steps">Steps/min:</string>
   	<string name="tim">Time-hh:mm:ss</string>
        	
		         <!--  beep strings -->
		         
		<string name="split1">Split 1:</string>
		<string name="split2">Split 2:</string>
		<string name="split3">Split 3:</string>
		<string name="split4">Split 4:</string>
		<string name="split5">Split 5:</string>
		<string name="split6">Split 6:</string>
		<string name="split7">Split 7:</string>
		<string name="split8">Split 8:</string>
		<string name="split9">Split 9:</string>
		<string name="split10">Split 10:</string>
		<string name="totaltime">Total Time:</string>
		<string name="attempts">    No of Splits\n (Less than 10):</string>
		<string name="dist2">Distance per \n   split (m):</string>
		  
                <!--  help documents -->
                
                	<!--  title strings-->
                	
       	<string name="run_test"><![CDATA[<b><u>Run</u></b>]]></string>
       	<string name="beep_test"><![CDATA[<b><u>Sprint Test</u></b>]]></string>
       	<string name="sprint_test"><![CDATA[<b><u>150s Test</u></b>]]></string>
       	<string name="power_test"><![CDATA[<b><u>Power Test</u></b>]]></string>
                	 	
					<!--  main -->
	<string name="help_main">Welcome to fitness tester. This app is designed to help you monitor your progress after each fitness test.
	    Please log onto <![CDATA[<b><u>www.fitnesstester.com</u></b>]]> to view all your results. <![CDATA[<br>]]>  For information on each test please navigate through the pages.\n  
	    <![CDATA[<br>]]>Enjoy your training! </string>
	 
	<string name="help">Help</string>
	                      
          <string name="jump_help">Vertical jumps are used to both train and test for power output in athletes. 
            This test will ask you to perform three jumps. First you must attach the mobile
             to just above your ankle. (An armband is a good way) Press start and the test will begin. When
              3 jumps are done you will be able to save you best jump.</string>
              
          <string name="run_help">Press start to start recording. When you are finished press stop
              and your distnace, pace time and steps per minute will be displayed and saved to the database</string>
                      
          <string name="speed_help">Layout a 25 metre lane with a cone at 5 metre intervals. When you are prompted run to the first cone, back to the start,
                      run to the second cone, back to the start and so on until the timer sounds. If each interval is completed they will have run a total distance of 150 metres.
                       There is a total of 6 intervals with a 30 second rest in between.</string>
         
          <string name="beep_help">Set a lane with whatever distance you require. Press the start button. A pop up box will appear
              asking you how many laps and what distnace you want to do. e.g.100m lane by 10 laps is a total of 1km.
              Press start when finished.The app will record your time for each lap and display it when you finish.
              A button will then pop up to save your data.</string>
                      
          <string name="sync_help">To upload all your information to the website you must press the sync button. You must have an internet connection to do this.
              This will upload all your results to the website.</string>
</resources>
