<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/Logged_in_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="22dp"
        android:text="@string/fname"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fst_name_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="65dp"
        android:text="@string/age"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Logged_in_person"
        android:layout_alignRight="@+id/textView6"
        android:layout_below="@+id/Logged_in_person"
        android:layout_marginTop="20dp"
        android:text="@string/lname"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lname"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Logged_in_person"
        android:layout_toRightOf="@+id/Logged_in_person"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_Name"
        android:layout_alignLeft="@+id/fname"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/user_speed"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/user_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/lname"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView6"
        android:ems="10"
        android:inputType="textPersonName|textVisiblePassword" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Logged_in_person"
        android:layout_below="@+id/user_speed"
        android:layout_marginTop="19dp"
        android:text="@string/username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/age"
        android:layout_alignLeft="@+id/user_Name"
        android:layout_alignTop="@+id/textView7"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/user_speed"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="21dp"
        android:text="@string/pass"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/height"
        android:layout_alignLeft="@+id/password"
        android:layout_alignTop="@+id/fst_name_speed"
        android:ems="10"
        android:inputType="number|phone" />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weight"
        android:layout_alignLeft="@+id/age"
        android:layout_alignTop="@+id/usern_speed"
        android:ems="10"
        android:inputType="number|phone" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/height"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView5"
        android:ems="10"
        android:inputType="number|phone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_speed"
        android:layout_below="@+id/usern_speed"
        android:layout_marginTop="17dp"
        android:text="@string/weight"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/usern_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fst_name_speed"
        android:layout_below="@+id/fst_name_speed"
        android:layout_marginTop="22dp"
        android:text="@string/height"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fname_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/weight"
        android:text="@string/coach"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/coach_spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/weight"
        android:layout_below="@+id/weight" />

    <Button
        android:id="@+id/coach_add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/coach_spinner"
        android:layout_marginRight="20dp"
        android:layout_marginTop="27dp"
        android:height="40dp"
        android:text="@string/add_coach"
        android:width="90dp" />

    <Button
        android:id="@+id/set_coach"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/coach_add"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:height="40dp"
        android:text="@string/set"
        android:width="90dp" />

    <Button
        android:id="@+id/new_user_login"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/set_coach"
        android:layout_alignTop="@+id/set_coach"
        android:layout_toLeftOf="@+id/fst_name_speed"
        android:text="@string/create_user"
        android:textSize="15sp" />

</RelativeLayout>