<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/attempt_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="12dp"
        android:text="@string/split2"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/attempt_num"
        android:layout_below="@+id/attempt_num"
        android:layout_marginTop="12dp"
        android:text="@string/split3"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/jog_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/run_values"
        android:layout_below="@+id/run_values"
        android:layout_marginTop="12dp"
        android:text="@string/split7"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/attempt_num"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/att5_speed"
        android:background="@color/White"
        android:paddingLeft="20dp"
        android:textColor="@color/Black"
        android:textSize="15sp"
        android:width="100dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="12dp"
        android:text="@string/split1"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/split1"
        android:layout_alignRight="@+id/split1"
        android:layout_alignTop="@+id/attempt_num"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/split2"
        android:layout_alignRight="@+id/split2"
        android:layout_alignTop="@+id/textView3"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/walk_values"
        android:layout_alignLeft="@+id/split3"
        android:layout_alignRight="@+id/split3"
        android:layout_alignTop="@+id/textView4"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/Black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="12dp"
        android:text="@string/split4"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/run_values"
        android:layout_alignLeft="@+id/split4"
        android:layout_alignRight="@+id/split4"
        android:layout_alignTop="@+id/walk_values"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/walk_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="12dp"
        android:text="@string/split5"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/jog_values"
        android:layout_alignLeft="@+id/split5"
        android:layout_alignRight="@+id/split5"
        android:layout_alignTop="@+id/run_values"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/jog_values"
        android:layout_alignLeft="@+id/split6"
        android:layout_alignRight="@+id/split6"
        android:layout_alignTop="@+id/jog_values"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/att1_speed"
        android:layout_alignLeft="@+id/split7"
        android:layout_alignRight="@+id/split7"
        android:layout_alignTop="@+id/textView8"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/att5_speed"
        android:layout_alignLeft="@+id/split8"
        android:layout_alignRight="@+id/split8"
        android:layout_alignTop="@+id/att1_speed"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/split10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/att5_speed"
        android:layout_alignLeft="@+id/split9"
        android:layout_alignRight="@+id/split9"
        android:layout_alignTop="@+id/att5_speed"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:textColor="@color/Black"
        android:textSize="15sp" />

       <TextView
           android:id="@+id/run_values"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/walk_values"
           android:layout_below="@+id/walk_values"
           android:layout_marginTop="12dp"
           android:text="@string/split6"
           android:textColor="@color/white"
           android:textSize="15sp" />

       <TextView
           android:id="@+id/textView8"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/jog_values"
           android:layout_below="@+id/jog_values"
           android:layout_marginTop="12dp"
           android:text="@string/split8"
           android:textColor="@color/white"
           android:textSize="15sp" />

       <TextView
           android:id="@+id/att5_speed"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/att1_speed"
           android:layout_below="@+id/att1_speed"
           android:layout_marginTop="15dp"
           android:text="@string/split10"
           android:textColor="@color/white"
           android:textSize="15sp" />

       <TextView
           android:id="@+id/att1_speed"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView8"
           android:layout_below="@+id/textView8"
           android:layout_marginTop="15dp"
           android:text="@string/split9"
           android:textColor="@color/white"
           android:textSize="15sp" />

       <TextView
           android:id="@+id/tot_time_beep"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/textView15"
           android:layout_alignLeft="@+id/split10"
           android:layout_alignRight="@+id/split10"
           android:layout_alignTop="@+id/textView15"
           android:background="@color/white"
           android:paddingLeft="20dp"
           android:textColor="@color/black"
           android:textSize="15sp" />

       <TextView
           android:id="@+id/textView15"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/textView16"
           android:layout_marginTop="12dp"
           android:layout_toLeftOf="@+id/split1"
           android:text="@string/totaltime"
           android:textColor="@color/white"
           android:textSize="15sp" />

       <Button
           android:id="@+id/save_beep"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBaseline="@+id/beep_start"
           android:layout_alignBottom="@+id/beep_start"
           android:layout_alignRight="@+id/tot_time_beep"
           android:background="@color/Teal"
           android:height="30dp"
           android:text="@string/save"
           android:width="80dp" />

       <TextView
           android:id="@+id/textView16"
           android:layout_width="match_parent"
           android:layout_height="5dp"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/split10"
           android:layout_marginTop="12dp"
           android:background="@color/teal" />

       <Button
           android:id="@+id/beep_start"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/att5_speed"
           android:layout_below="@+id/tot_time_beep"
           android:layout_marginTop="14dp"
           android:background="@color/Teal"
           android:height="30dp"
           android:text="@string/start"
           android:width="80dp" />

</RelativeLayout>
